# Split-App

./: Cargo.toml  README.md  rustfmt.toml
data/: index.json
src/: cli.rs  expense.rs  main.rs
